<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:android1="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#ffffff" >

        <TableRow
            android:id="@+id/tableRow_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vs"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android1:text="@string/Publish_Data"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="#ffffff" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <TableRow
            android:id="@+id/tableRow_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android1:id="@+id/button_selectVS"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:layout_span="2"
                android:gravity="center"
                android:textColor="#ffffff"
                android1:text="@string/select" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_vsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsName"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/server"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="#ffffff" />

            <EditText
                android:id="@+id/editText_vsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textColor="#ffffff"
                android1:text="@string/gsnserver" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_vsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsType"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/strategy"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="#ffffff" />

            <Spinner
                android1:id="@+id/spinner_strategy"
                style="@layout/spinner_item"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:entries="@array/strategy"
                android1:textColor="#ffffff" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow_ssWindowSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ssWindowSize"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/every"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="#ffffff" />

            <EditText
                android:id="@+id/editText_ssWindowSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:textColor="#ffffff"
                android1:text="@string/sixty" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android1:id="@+id/button1"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:textColor="#ffffff"
                android1:text="@string/publish" />
        </TableRow>
    </TableLayout>

</ScrollView>